--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h1>box-3</h1>
         </div>
         <div class="box" id="box-4">
-            <h1>box-4</h1>
+            <h1>box-4.</h1>
         </div>
         <div class="box" id="box-5">
             <h1>box-5</h1>
